[gd_scene load_steps=12 format=3 uid="uid://81lxjn5jxwia"]

[ext_resource type="Script" path="res://scenes/levels/level1/level_1.gd" id="1_gyje7"]
[ext_resource type="MeshLibrary" uid="uid://d555b7hr33n7" path="res://assets/tiles.tres" id="2_acx70"]
[ext_resource type="PackedScene" uid="uid://ckk03qsadcwlw" path="res://scenes/entities/player/player.tscn" id="3_2ytrf"]
[ext_resource type="PackedScene" uid="uid://5ye6f6br2bts" path="res://scenes/user_interface/user_interface.tscn" id="4_0v6te"]
[ext_resource type="PackedScene" uid="uid://bsi2sm86hkhor" path="res://scenes/objects/qubit/qubit.tscn" id="5_4wwy3"]
[ext_resource type="PackedScene" uid="uid://65xnlas5jt2i" path="res://scenes/objects/quantum_gate_slot/quantum_gate_slot.tscn" id="6_pcu23"]
[ext_resource type="PackedScene" uid="uid://e2dv2absvtoc" path="res://scenes/objects/teleporter/teleporter.tscn" id="7_krr8e"]
[ext_resource type="PackedScene" uid="uid://o2xud88mln6v" path="res://scenes/objects/door/door.tscn" id="7_lmfto"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_gyik4"]
sky_top_color = Color(0.134281, 0.16838, 0.215799, 1)
sky_horizon_color = Color(0.598989, 0.597969, 0.598742, 1)
ground_bottom_color = Color(0.261676, 0.223495, 0.179171, 1)
ground_horizon_color = Color(0.598989, 0.597969, 0.598742, 1)

[sub_resource type="Sky" id="Sky_5thir"]
sky_material = SubResource("ProceduralSkyMaterial_gyik4")

[sub_resource type="Environment" id="Environment_hc8un"]
background_mode = 2
sky = SubResource("Sky_5thir")
tonemap_mode = 2
glow_enabled = true

[node name="Tutorial" type="Node3D"]
script = ExtResource("1_gyje7")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hc8un")

[node name="World" type="GridMap" parent="."]
mesh_library = ExtResource("2_acx70")
cell_size = Vector3(4, 1, 4)
data = {
"cells": PackedInt32Array(65533, 65533, 11, 65532, 2, 1048587, 65533, 2, 1048587, 65534, 2, 1048587, 65535, 2, 1048587, 0, 2, 1048587, 1, 2, 1048587, 2, 2, 1048587, 3, 65534, 1048587, 3, 65535, 1048587, 3, 0, 1048587, 3, 1, 1048587, 3, 2, 1048587, 3, 65533, 11, 2, 65533, 11, 1, 65533, 11, 0, 65533, 11, 65535, 65533, 11, 65534, 65533, 11, 327677, 65533, 1048587, 327678, 65533, 1048587, 327679, 65533, 1048587, 262144, 65533, 1048587, 262147, 65533, 1048587, 262146, 65533, 1048587, 262147, 65534, 1048587, 262147, 65535, 1048587, 262147, 0, 1048587, 262147, 1, 1048587, 262147, 2, 1048587, 262146, 2, 1048587, 262145, 2, 1048587, 327679, 2, 1048587, 262144, 2, 1048587, 327678, 2, 1048587, 327677, 2, 1048587, 327676, 2, 1048587, 589820, 65533, 1048587, 589821, 65533, 1441803, 589822, 65533, 1048587, 589823, 65533, 1441803, 524288, 65533, 1441803, 524289, 65533, 1048587, 524290, 65533, 1441803, 524291, 65533, 1441803, 524291, 65534, 1441803, 524291, 65535, 1441803, 524291, 0, 1441803, 524291, 1, 1441803, 524291, 2, 1048587, 524290, 2, 1048587, 524289, 2, 1048587, 524288, 2, 1048587, 589823, 2, 1048587, 589822, 2, 1048587, 589821, 2, 1048587, 589820, 2, 1048587, 589820, 1, 1048587, 589820, 0, 1048587, 589820, 65535, 1048587, 589820, 65534, 1048587, 589821, 65534, 1441803, 589821, 65535, 1441803, 589821, 0, 1441803, 589821, 1, 1441803, 589822, 1, 1441803, 589822, 0, 1441803, 589822, 65535, 1441803, 589822, 65534, 1441803, 589823, 65534, 1441803, 589823, 65535, 1441803, 589823, 0, 1441803, 589823, 1, 1441803, 524288, 0, 1441803, 524288, 65535, 1441803, 524288, 65534, 1441803, 524289, 65535, 1441803, 524289, 65534, 1441803, 524290, 65534, 1441803, 524289, 0, 1441803, 524290, 0, 1441803, 524290, 65535, 1441803, 524289, 1, 1441803, 524290, 1, 1441803, 524288, 1, 1441803, 262144, 65534, 1048587, 262144, 1, 1048587, 0, 1, 1048587, 0, 65534, 1048587, 262145, 65533, 1441803, -262144, 1, 1048587, -262144, 0, 1048587, -262144, 65535, 1048587, -262144, 65534, 1048587, -196609, 65534, 1048587, -196609, 65535, 1048587, -196609, 0, 1048587, -196609, 1, 1048587, -262144, 2, 1048587, -196609, 2, 1048587, -262144, 65533, 1048587, -196609, 65533, 1048587, -196610, 65533, 1048587, -196611, 65533, 1048587, -196610, 65534, 1048587, -196611, 65534, 1048587, -196610, 65535, 1048587, -196611, 65535, 1048587, -262143, 65534, 1048587, -262142, 65534, 1048587, -262141, 65534, 1048587, -262141, 65535, 1048587, -262142, 65535, 1048587, -262143, 65535, 1048587, -262143, 0, 1048587, -262143, 1, 1048587, -262143, 2, 1048587, -262142, 2, 1048587, -262142, 0, 1048587, -262142, 1, 1048587, -262141, 0, 1048587, -262141, 1, 1048587, -262141, 2, 1048587, -196610, 0, 1048587, -196610, 1, 1048587, -196610, 2, 1048587, -196611, 2, 1048587, -196612, 2, 1048587, -196612, 1, 1048587, -196611, 1, 1048587, -196612, 0, 1048587, -196612, 65535, 1048587, -196612, 65534, 1048587, -196612, 65533, 1048587, -196611, 0, 655371, -262143, 65533, 1048587, -262142, 65533, 1048587, -262141, 65533, 1048587, 65532, 65533, 11, 65531, 65533, 11, 65531, 65534, 11, 65531, 65535, 11, 65531, 0, 11, 65531, 1, 11, 65531, 2, 11, 327675, 65533, 11, 327676, 65533, 11, 327675, 65534, 11, 327675, 65535, 11, 327675, 0, 11, 327675, 1, 11, 327675, 2, 11, -196613, 65535, 11, -196613, 65533, 11, -196613, 0, 11, -196613, 1, 11, -196613, 65534, 11, -196613, 2, 11, 589819, 2, 1441803, 589819, 1, 1441803, 589819, 0, 1441803, 589819, 65535, 1441803, 589819, 65534, 1441803, 589819, 65533, 1441803)
}
metadata/_editor_floor_ = Vector3(0, 8, 0)

[node name="Player" parent="." instance=ExtResource("3_2ytrf")]
transform = Transform3D(0.848528, 0, -0.848528, 0, 1.2, 0, 0.848528, 0, 0.848528, -14, 0.5, 6)

[node name="UserInterface" parent="." instance=ExtResource("4_0v6te")]

[node name="Objects" type="Node3D" parent="."]

[node name="Circuit" type="Node3D" parent="Objects"]

[node name="GoalQubit" parent="Objects/Circuit" instance=ExtResource("5_4wwy3")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -10, 0.5, -4)
visible = false
is_gold = true
initial_state = 1

[node name="InputQubit" parent="Objects/Circuit" node_paths=PackedStringArray("next_slot") instance=ExtResource("5_4wwy3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0.5, 0)
next_slot = NodePath("QuantumGateSlot")

[node name="QuantumGateSlot" parent="Objects/Circuit/InputQubit" node_paths=PackedStringArray("qubit_in") instance=ExtResource("6_pcu23")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
qubit_in = NodePath("..")

[node name="Lamps" type="Node3D" parent="Objects"]

[node name="OmniLight3D" type="OmniLight3D" parent="Objects/Lamps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 8, -4)
light_energy = 10.0
omni_range = 20.0
omni_attenuation = 2.0

[node name="OmniLight3D2" type="OmniLight3D" parent="Objects/Lamps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 8, 4)
light_energy = 10.0
omni_range = 20.0
omni_attenuation = 2.0

[node name="OmniLight3D3" type="OmniLight3D" parent="Objects/Lamps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 8, 4)
light_energy = 10.0
omni_range = 20.0
omni_attenuation = 2.0

[node name="OmniLight3D6" type="OmniLight3D" parent="Objects/Lamps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 8, -6)
light_energy = 10.0
omni_range = 20.0
omni_attenuation = 2.0

[node name="OmniLight3D4" type="OmniLight3D" parent="Objects/Lamps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 8, -4)
light_energy = 10.0
omni_range = 20.0
omni_attenuation = 2.0

[node name="OmniLight3D5" type="OmniLight3D" parent="Objects/Lamps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 8, 4)
light_energy = 10.0
omni_range = 20.0
omni_attenuation = 2.0

[node name="Door" parent="Objects" instance=ExtResource("7_lmfto")]
transform = Transform3D(-8.74228e-08, 0, -2, 0, 2, 0, 2, 0, -8.74228e-08, 2.5, 0.5, 0)

[node name="Teleporter" parent="Objects" instance=ExtResource("7_krr8e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0.15, 6)
